additions to engine.py

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "333f8abe",
    "metadata": {},
    "outputs": [
@@ -112,14 +112,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 days 00:00:00\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "date=pd.Timestamp(\"2024-06-01\")\n",
-    "new_date=date.Timedelta(days=10)\n",
-    "print(new_date)\n"
+    "new_date=date+pd.Timedelta(days=200)\n",
+    "print(new_date>date)\n"
    ]
   }
  ],
