--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8aa0cc11",
    "metadata": {},
    "outputs": [],
@@ -16,110 +16,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a7d7b908",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stock_list=[\"AAPL\",\"MSFT\",\"GOOG\",\"AMZN\",\"TSLA\",\"^GSPC\",\"NVDA\",\"META\",\"KO\",\"PEP\"]\n",
-    "data=yf.download(stock_list,start=\"2016-01-01\",end=\"2026-01-01\")['Close']\n",
-    "print(data.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4fd2912",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price=yf.download(\"AAPL\", start=\"2024-01-02\", end=\"2024-01-03\")['Close']\n",
-    "print(price)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0daf86e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "plt.figure(figsize=(10,6))\n",
-    "\n",
-    "for stock in stock_list:\n",
-    "    data[stock].dropna(inplace=True)\n",
-    "    log_returns= pd.Series(np.log(data[stock]/data[stock].shift(1))).dropna().cumsum()\n",
-    "    plt.plot(log_returns, label=stock)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "086ae3f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "for stock in stock_list:\n",
-    "    if stock == \"^GSPC\":\n",
-    "            plt.plot(data[stock].pct_change().cumsum(), label=\"S&P 500\")\n",
-    "    else:\n",
-    "        plt.plot(data[stock].pct_change().cumsum(), label=stock)\n",
-    "    plt.title(f\"Stock Cumulative Returns\")\n",
-    "    plt.xlabel(\"Date\")\n",
-    "    plt.ylabel(\"Cumulative Returns\")\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7be63199",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for stock in stock_list:\n",
-    "    data[stock].dropna(inplace=True)\n",
-    "    log_returns = np.log(data[stock] / data[stock].shift(1)).dropna()\n",
-    "    annual_return= log_returns.mean()*252\n",
-    "    annual_volatility= data[stock].pct_change().std()*np.sqrt(252)\n",
-    "    sharpe=annual_return/annual_volatility\n",
-    "    print(f\"{stock} - Annual Return: {annual_return:.2%}, Annual Volatility: {annual_volatility:.2%}, Sharpe Ratio: {sharpe:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c761b0a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df=pd.DataFrame()\n",
-    "for stock in stock_list:\n",
-    "    df[stock]=data[stock]\n",
-    "print(df.tail())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "333f8abe",
+   "execution_count": 58,
+   "id": "bec658dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "              cash  equity  gross_exposure  net_exposure  leverage  \\\n",
+      "ts                                                                   \n",
+      "2024-01-01  100000  100000             0.0           0.0       0.0   \n",
+      "2024-01-02  100000  100000             0.0           0.0       0.0   \n",
+      "2024-01-03  100000  100000             0.0           0.0       0.0   \n",
+      "2024-01-04  100000  100000             0.0           0.0       0.0   \n",
+      "2024-01-05  100000  100000             0.0           0.0       0.0   \n",
+      "2024-01-06  100000  100000             0.0           0.0       0.0   \n",
+      "\n",
+      "            n_positions  \n",
+      "ts                       \n",
+      "2024-01-01            0  \n",
+      "2024-01-02            0  \n",
+      "2024-01-03            0  \n",
+      "2024-01-04            0  \n",
+      "2024-01-05            0  \n",
+      "2024-01-06            0  \n"
      ]
     }
    ],
    "source": [
-    "date=pd.Timestamp(\"2024-06-01\")\n",
-    "new_date=date+pd.Timedelta(days=200)\n",
-    "print(new_date>date)\n"
+    "from btlib.engine import BacktestConfig,BacktestResults,Strategy,run_positions_only\n",
+    "from btlib.data.market_data import MarketData\n",
+    "from btlib.core.order_types import PortfolioState\n",
+    "\n",
+    "def make_market() -> MarketData:\n",
+    "    idx = pd.date_range(\"2024-01-01\", periods=6, freq=\"D\")\n",
+    "    close = pd.DataFrame(\n",
+    "        {\n",
+    "            \"AAPL\": [100.0, 101.0, 102.0, 103.0, 104.0, 105.0],\n",
+    "            \"MSFT\": [200.0, 199.0, 201.0, 202.0, 203.0, 204.0],\n",
+    "        },\n",
+    "        index=idx,\n",
+    "    )\n",
+    "    return MarketData(close)\n",
+    "ts=\"2024-01-02\"\n",
+    "data=make_market()\n",
+    "state=PortfolioState(ts,10000,{})\n",
+    "cfg=BacktestConfig()\n",
+    "class ClipStrategy:\n",
+    "    def __init__(self, sym: str):\n",
+    "        self.sym = sym\n",
+    "\n",
+    "    def on_bar(self, ts, data_upto_ts, state):\n",
+    "        return {self.sym: 2.0}  # intentionally too large\n",
+    "cs=ClipStrategy(\"AAPL\")\n",
+    "\n",
+    "rs=run_positions_only(data,cs,cfg)\n",
+    "print(rs.ledger)\n",
+    "\n"
    ]
   }
  ],
